# labb_1

./: README.md
labubu/: CMakeLists.txt  main.cpp
